2004-10-22  Sven Neumann  <sven@gimp.org>

	* app/actions/colormap-editor-actions.c
	* app/actions/dialogs-actions.c
	* app/core/gimpimage-colormap.c
	* app/dialogs/convert-dialog.c
	* app/dialogs/dialogs.c
	* app/widgets/gimpcolormapeditor.c: use the term "Colormap"
	instead of "Indexed Palette". Fixes bug #155829.

2004-10-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/wmf.c: applied a patch by Karine Proot that adds
	a preview to the load dialog and a similar UI as the SVG loader.
	Fixes bug #133519 and bug #133521.

2004-10-22  Michael Natterer  <mitch@gimp.org>

	* app/core/core-enums.[ch]: added new enum GimpStrokeMethod which
	can be one of { LIBART, PAINT_CORE }.

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpstrokedesc.[ch]: new object which encapsulates
	the params and setup logic for the different stroke methods.

	* app/core/gimpitem.[ch]: use it in GimpItem::stroke() and
	in the gimp_item_stroke() wrapper.

	* app/core/gimpchannel.c (gimp_channel_stroke)
	* app/core/gimpselection.c (gimp_selection_stroke)
	* app/vectors/gimpvectors.c (gimp_vectors_stroke): changed accprdingly.

	* app/actions/select-commands.c
	* app/actions/vectors-commands.c
	* app/dialogs/stroke-dialog.c
	* tools/pdbgen/pdb/edit.pdb
	* tools/pdbgen/pdb/paths.pdb: use GimpStrokeDesc. Simplifies the
	code quite a bit.

	* app/pdb/edit_cmds.c
	* app/pdb/paths_cmds.c: regenerated.

2004-10-22  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppropwidgets.c: remember the param_spec with each
	radio button instead of with the box/frame around them.

2004-10-21 Kevin Cozens <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/script-fu.c: Removed _() tag from two strings
	that should not have been marked for translation.

2004-10-21  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/scripts-fu.c: Fixed spelling error.

2004-10-21  Michael Natterer  <mitch@gimp.org>

	* app/actions/select-actions.c
	* app/actions/select-commands.[ch]