@@ -1,5 +1,10 @@
 2004-10-22  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/wmf.c: fixed non-interactive call with default
+	values.
+
+2004-10-22  Sven Neumann  <sven@gimp.org>
+
 	* app/actions/colormap-editor-actions.c
 	* app/actions/dialogs-actions.c
 	* app/core/gimpimage-colormap.c
